[gd_scene load_steps=3 format=3 uid="uid://cnr6yvkeqp15p"]

[ext_resource type="Texture2D" uid="uid://bbhwmqtxswm33" path="res://Assets/MENU.png" id="1_853f1"]
[ext_resource type="Script" uid="uid://dthcdomum4kdj" path="res://Scripts/MainMenu.gd" id="1_tt5f1"]

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1282.0
offset_bottom = 723.0
texture = ExtResource("1_853f1")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 901.0
offset_top = 561.0
offset_right = 1350.0
offset_bottom = 672.0
theme_override_font_sizes/normal_font_size = 36
text = "Œil qui fait peur"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 44.0
offset_top = 146.0
offset_right = 1219.0
offset_bottom = 662.0
theme_override_constants/h_separation = 284
theme_override_constants/v_separation = 84
script = ExtResource("1_tt5f1")

[node name="Play" type="MenuButton" parent="GridContainer"]
layout_mode = 2
focus_next = NodePath("../Options")
theme_override_font_sizes/font_size = 30
text = "Jouer"
alignment = 0

[node name="Options" type="MenuButton" parent="GridContainer"]
layout_mode = 2
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
theme_override_font_sizes/font_size = 30
text = "Options"
alignment = 0

[node name="Credits" type="MenuButton" parent="GridContainer"]
layout_mode = 2
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
theme_override_font_sizes/font_size = 30
text = "Crédits"
alignment = 0

[node name="Quit" type="MenuButton" parent="GridContainer"]
layout_mode = 2
focus_previous = NodePath("../Options")
theme_override_font_sizes/font_size = 30
text = "Quitter"
alignment = 0

[connection signal="pressed" from="GridContainer/Play" to="GridContainer" method="_on_play_pressed"]
[connection signal="pressed" from="GridContainer/Options" to="GridContainer" method="_on_options_pressed"]
[connection signal="pressed" from="GridContainer/Credits" to="GridContainer" method="_on_credits_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="GridContainer" method="_on_quit_pressed"]
